fix(VList): set explicit overflow-wrap to break-word
fixes #19233
reverts 74be064

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -181,7 +181,7 @@
   overflow: hidden
   padding: $list-item-subtitle-padding
   text-overflow: ellipsis
-  word-break: $list-item-subtitle-word-break
+  overflow-wrap: $list-item-subtitle-overflow-wrap
 
   .v-list-item--one-line &
     -webkit-line-clamp: 1
